--- a/preprocess_images.ipynb
+++ b/preprocess_images.ipynb
@@ -294,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This function simply applies the previous two functions to an entire directory and outputs the result to a new directory of the same name except with '_pp' appended to the end.\n",
+    "This function simply applies the previous two functions to an entire directory and outputs the result to a new directory of the same name except with '_pp' appended to the end. Files that weren't jpegs or pngs were skipped.\n",
     "\n",
     "The cell following simply applies this function to every subdirectory in the 'images' directory."
    ]
